backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: tasks-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccount: tasks-app-account
      containers:
      - name: backend
        image: sesaquecruz/java-tasks-api:1.2.0
        resources:
          requests: 
            cpu: "0.25"
            memory: 500Mi
          limits:
            cpu: "0.5"
            memory: 750Mi
        startupProbe:
          httpGet:
            path: /api/v1/actuator/health
            port: 8080
          periodSeconds: 5
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /api/v1/actuator/health
            port: 8080
          periodSeconds: 5
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /api/v1/actuator/health
            port: 8080
          periodSeconds: 5
          failureThreshold: 3
          timeoutSeconds: 5
          successThreshold: 1
        ports:
        - containerPort: 8080
