backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: tasks-app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: git.tasks.api.sesaque.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: backend-service
                port:
                  number: 80
  tls:
    - hosts:
      - git.tasks.api.sesaque.com
      secretName: backend-letsencrypt-secret
